-
Bug
-
Resolution: Fixed
-
P2: Important
-
5.12.0 Beta 4
Building Qt 5.12 breaks with the following message:
/home/ghguest/src/qtbase/src/corelib/global/qendian.cpp:41:0: /home/ghguest/src/qtbase/src/corelib/global/qendian.h:165:61: error: redeclaration 'constexpr T qbswap(T) [with T = qfloat16]' differs in 'constexpr' template <> inline qfloat16 qbswap<qfloat16>(qfloat16 source) ^ /home/ghguest/src/qtbase/src/corelib/global/qendian.h:96:42: error: from previous declaration 'constexpr T qbswap(T) [with T = qfloat16]' template <typename T> Q_DECL_CONSTEXPR T qbswap(T source); ^ /home/ghguest/src/qtbase/src/corelib/global/qendian.h:170:52: error: redeclaration 'constexpr T qbswap(T) [with T = float]' differs in 'constexpr' template <> inline float qbswap<float>(float source) ^ /home/ghguest/src/qtbase/src/corelib/global/qendian.h:96:42: error: from previous declaration 'constexpr T qbswap(T) [with T = float]' template <typename T> Q_DECL_CONSTEXPR T qbswap(T source); ^ /home/ghguest/src/qtbase/src/corelib/global/qendian.h:175:55: error: redeclaration 'constexpr T qbswap(T) [with T = double]' differs in 'constexpr' template <> inline double qbswap<double>(double source)
The break may come from this change:
https://code.qt.io/cgit/qt/qtbase.git/commit/src/corelib/global/qendian.h?h=5.12.0&id=95476bfcf64aa9cb43775ebfe3410ce9565de4d5
- duplicates
-
QTBUG-72669 when I include header: <QtCore> or <QtGui> that include qendian.h, and build will error
-
- Closed
-
- is duplicated by
-
QTBUG-72399 Compile error
-
- Closed
-
| For Gerrit Dashboard: QTBUG-71945 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 246190,4 | Fix compilation of qendian's qswap specializations on gcc 4.8 | 5.12 | qt/qtbase | Status: MERGED | +2 | 0 |
| 249104,2 | Fix qbswap calls for Big Endian targets | 5.12 | qt/qtbase | Status: MERGED | +2 | 0 |