qendian: Adding Q_DECL_CONSTEXPR to float conversion specializations

This fixes build failures seen with gcc 4.8
Fixes https://bugreports.qt.io/browse/QTBUG-71945

Upstream-Status: Pending
Signed-off-by: Khem Raj <raj.khem@gmail.com>